# techspark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
techspark/: class_object.py  cosine_similarity.py  course.py  embedding.py  fuzzy_search.py  instructor.py  match.py  schedule.py
