[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["techspark", "techspark.*"]

[tool.setuptools.package-data]
techspark = ["py.typed"]

[project]
name = "techspark"
version = "0.1.1"
description = "TechSpark Assistant."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Aslan Noorghasemi", email = "aslann@cmu.edu" },
    { name = "Christopher McComb", email = "ccm@cmu.edu" },
]
dependencies = []
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]